force-app/main/default/objects/Manager_Response__c/Manager_Response__c.object-meta.xml
<CustomObject>
    <label>Manager Response</label>
    <nameField>
        <displayFormat>MR-{0000}</displayFormat>
        <label>ManagerResponse Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manager Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>