force-app/main/default/objects/Manager_Response__c/fields/Feedback_Form_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Form_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feedback Form Lookup</label>
    <referenceTo>Feedback_Form__c</referenceTo>
    <relationshipLabel>Manager Responses</relationshipLabel>
    <relationshipName>Manager_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>