force-app/main/default/objects/Manager_Response__c/fields/Manager_Response_Test__c.field-meta.xml
<CustomField>
    <fullName>Manager_Response_Test__c</fullName>
    <label>Manager Response Test</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>