force-app/main/default/objects/Manager_Response__c/fields/User_Lookup__c.field-meta.xml
<CustomField>
    <fullName>User_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Lookup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Manager_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>